[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menu/Credits.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/menu/LocalMenu.gd" type="Script" id=4]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -66.5
margin_right = 54.0
margin_bottom = 66.5

[node name="Title" type="Label" parent="Options"]
margin_right = 108.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "stickmaniac
"
align = 1

[node name="Local" type="Button" parent="Options"]
margin_top = 47.0
margin_right = 108.0
margin_bottom = 73.0
text = "local"

[node name="Online" type="Button" parent="Options"]
margin_top = 77.0
margin_right = 108.0
margin_bottom = 103.0
disabled = true
text = "online"

[node name="Credits" type="Button" parent="Options"]
margin_top = 107.0
margin_right = 108.0
margin_bottom = 133.0
text = "credits"

[node name="CreditsPopup" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LocalMenu" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="LocalMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.509804, 0.509804, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="LocalMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 148.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="LocalMenu/VBoxContainer"]
margin_right = 108.0
margin_bottom = 43.0
text = "local game
"

[node name="Singleplayer" type="Button" parent="LocalMenu/VBoxContainer"]
margin_top = 47.0
margin_right = 108.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( -672, -280 )
text = "singleplayer"

[node name="Multiplayer" type="Button" parent="LocalMenu/VBoxContainer"]
margin_top = 77.0
margin_right = 108.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( -672, -280 )
text = "multiplayer"

[node name="Cancel" type="Button" parent="LocalMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -63.0
margin_bottom = 26.0
text = "cancel"

[connection signal="pressed" from="Options/Local" to="." method="_on_Local_pressed"]
[connection signal="pressed" from="Options/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="LocalMenu/VBoxContainer/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="LocalMenu/VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="LocalMenu/Cancel" to="LocalMenu" method="_on_Cancel_pressed"]
